--- a/.devops/azure-templates/swap-new-old-deployment.yml
+++ b/.devops/azure-templates/swap-new-old-deployment.yml
@@ -142,25 +142,25 @@ stages:
     jobs:
       - job: Start_Old_Stop_New_Receivers
         steps:
-          - template: azure-templates/send-receiver-command.yml
+          - template: send-receiver-command.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
               ENV: ${{ parameters.VALUE_FILE }}
               COMMAND: START
               TARGET_DEPLOYMENT_VERSION: OLD
-          - template: azure-templates/polling-receivers-status.yml
+          - template: polling-receivers-status.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
               ENV: ${{ parameters.VALUE_FILE }}
               WANTED_STATUS: UP
               TARGET_DEPLOYMENT_VERSION: OLD
-          - template: azure-templates/send-receiver-command.yml
+          - template: send-receiver-command.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
               ENV: ${{ parameters.VALUE_FILE }}
               COMMAND: STOP
               TARGET_DEPLOYMENT_VERSION: NEW
-          - template: azure-templates/polling-receivers-status.yml
+          - template: polling-receivers-status.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
               ENV: ${{ parameters.VALUE_FILE }}
@@ -246,25 +246,25 @@ stages:
       - job: Start_New_Stop_Old_Receivers
         displayName: Start new receivers by curl command and stop old ones
         steps:
-          - template: azure-templates/send-receiver-command.yml
+          - template: send-receiver-command.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
               ENV: ${{ parameters.VALUE_FILE }}
               COMMAND: START
               TARGET_DEPLOYMENT_VERSION: NEW
-          - template: azure-templates/polling-receivers-status.yml
+          - template: polling-receivers-status.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
               ENV: ${{ parameters.VALUE_FILE }}
               WANTED_STATUS: UP
               TARGET_DEPLOYMENT_VERSION: NEW
-          - template: azure-templates/send-receiver-command.yml
+          - template: send-receiver-command.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
               ENV: ${{ parameters.VALUE_FILE }}
               COMMAND: STOP
               TARGET_DEPLOYMENT_VERSION: OLD
-          - template: azure-templates/polling-receivers-status.yml
+          - template: polling-receivers-status.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
               ENV: ${{ parameters.VALUE_FILE }}
