fix: polling status wanted status values

--- a/.devops/azure-templates/polling-receivers-status.yml
+++ b/.devops/azure-templates/polling-receivers-status.yml
@@ -17,8 +17,8 @@ parameters:
   - name: WANTED_STATUS
     type: string
     values:
-      - START
-      - STOP
+      - UP
+      - DOWN
   # command target deployment version
   - name: TARGET_DEPLOYMENT_VERSION
     type: string
