fix: parameterize task steps

--- a/.devops/azure-templates/send-receiver-command.yml
+++ b/.devops/azure-templates/send-receiver-command.yml
@@ -28,7 +28,7 @@ parameters:
 
 steps:
   - task: Bash@3
-    name: start_old_receivers
+    name: {{ parameters.COMMAND }}_receivers_{{ parameters.TARGET_DEPLOYMENT_VERSION }}
     displayName: 'Perform curl to start old receivers'
     inputs:
       targetType: "inline"
