--- a/.devops/azure-templates/swap-new-old-deployment.yml
+++ b/.devops/azure-templates/swap-new-old-deployment.yml
@@ -162,29 +162,15 @@ stages:
     jobs:
       - job: Start_Old_Stop_New_Receivers
         steps:
-          - template: send-receiver-command.yml
+          - template: start-receivers.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
               ENV: ${{ parameters.ENV }}
-              COMMAND: START
               TARGET_DEPLOYMENT_VERSION: OLD
-          - template: polling-receivers-status.yml
+          - template: stop-receivers.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
               ENV: ${{ parameters.ENV }}
-              WANTED_STATUS: UP
-              TARGET_DEPLOYMENT_VERSION: OLD
-          - template: send-receiver-command.yml
-            parameters:
-              DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
-              ENV: ${{ parameters.ENV }}
-              COMMAND: STOP
-              TARGET_DEPLOYMENT_VERSION: NEW
-          - template: polling-receivers-status.yml
-            parameters:
-              DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: old
-              ENV: ${{ parameters.ENV }}
-              WANTED_STATUS: DOWN
               TARGET_DEPLOYMENT_VERSION: NEW
 
 
@@ -267,29 +253,15 @@ stages:
       - job: Start_New_Stop_Old_Receivers
         displayName: Start new receivers by curl command and stop old ones
         steps:
-          - template: send-receiver-command.yml
+          - template: start-receivers.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
               ENV: ${{ parameters.ENV }}
-              COMMAND: START
               TARGET_DEPLOYMENT_VERSION: NEW
-          - template: polling-receivers-status.yml
+          - template: stop-receivers.yml
             parameters:
               DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
               ENV: ${{ parameters.ENV }}
-              WANTED_STATUS: UP
-              TARGET_DEPLOYMENT_VERSION: NEW
-          - template: send-receiver-command.yml
-            parameters:
-              DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
-              ENV: ${{ parameters.ENV }}
-              COMMAND: STOP
-              TARGET_DEPLOYMENT_VERSION: OLD
-          - template: polling-receivers-status.yml
-            parameters:
-              DEPLOYMENT_INSTANCE_COMMAND_RECEIVER: new
-              ENV: ${{ parameters.ENV }}
-              WANTED_STATUS: DOWN
               TARGET_DEPLOYMENT_VERSION: OLD
 
 
